# Cpp-Python-TTS-library

./: .gitignore  CMakeLists.txt  README.md  requrements.txt
embedded/windows/: setup.py
examples/linux/: CMakeLists.txt  README.md  main.cpp
examples/python/: README.md  requirements.txt  tts_test.py
examples/windows/: CMakeLists.txt  README.md  main.cpp
src/: CMakeLists.txt  CppPyTTSConfig.cmake.in  TTS.hpp
src/TTS/: PythonMaintainer.cpp  PythonMaintainer.hpp  TTS.cpp  TTS.hpp  core.hpp
src/TTS/WAV/: WAVHeader.cpp  WAVHeader.hpp
